# ferrite

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS  Makefile  OWNERS  README.md  SECURITY.md  build.rs  run_performance_tests.sh  run_performance_tests_simple.sh  rust-toolchain.toml  rustfmt.toml  setup-hooks.sh  table_iterator.d  test.sql
.cursor/: .cursorrules
.cursor/rules/: buffer-management.mdc  concurrency.mdc  general.mdc  networking.mdc  performance.mdc  sql-execution.mdc  storage.mdc  testing.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
benches/: cache_benchmarks.rs  fifo_cache_benchmarking.rs  fifo_complexity_benchmarks.rs  time_complexity_demo.rs
docs/: ARCHITECTURE.md  BENCHMARKING.md  EVIDENCE.md  FIFO_BENCHMARK_PLAN.md  GIT_HOOKS.md  LOCK_ORDERING.md  LRU_CACHE_REFACTORING_PLAN.md  NON_GOALS.md  PERFORMANCE_TESTS.md  VISION.md  ZERO_COPY_ARCHITECTURE.md  ZERO_COPY_IMPLEMENTATION_PLAN.md
examples/: README.md  basic_usage.rs  crash_recovery_evidence.rs  transactions.rs
scripts/: crash_recovery_evidence.sh
src/: bigint_type.rs  boolean_type.rs  buffer_pool_manager.rs  cli.rs  column.rs  config.rs  decimal_type.rs  disk_manager.rs  integer_type.rs  lib.rs  limits.rs  lru_k_replacer.rs  main.rs  page.rs  rwlatch.rs  schema.rs  smallint_type.rs  table_heap.rs  table_page.rs  timestamp_type.rs  tinyint_type.rs  tuple.rs  type_id.rs  types.rs  value.rs  varlen_type.rs  vector_type.rs
src/binder/: binder.rs  bound_expression.rs  bound_order_by.rs  bound_statement.rs  bound_table_ref.rs  mod.rs  simplified_tokens.rs
src/binder/expressions/: bound_agg_call.rs  bound_alias.rs  bound_binary_op.rs  bound_column_ref.rs  bound_constant.rs  bound_cube.rs  bound_func_call.rs  bound_group_sets.rs  bound_rollup.rs  bound_star.rs  bound_type_cast.rs  bound_unary_op.rs  bound_window.rs  mod.rs
src/binder/statement/: create_statement.rs  delete_statement.rs  explain_statement.rs  index_statement.rs  insert_statement.rs  mod.rs  select_statement.rs  set_show_statement.rs  update_statement.rs
src/binder/table_ref/: bound_base_table_ref.rs  mod.rs  (+2 more)
src/buffer/: buffer_pool_manager.rs  buffer_pool_manager_async.rs  lru_k_replacer.rs  mod.rs
src/catalog/: catalog.rs  catalog_impl.rs  column.rs  constraints.rs  database.rs  mod.rs  schema.rs  system_catalog.rs
src/catalogue/: catalogue.rs  column.rs  mod.rs  schema.rs
src/client/: client.rs  client_impl.rs  mod.rs
src/common/: config.rs  db_instance.rs  exception.rs  limits.rs  logger.rs  mod.rs  performance_monitor.rs  result_writer.rs  rid.rs  rwlatch.rs  spinlock.rs  statement_type.rs  time.rs
src/concurrency/: lock_manager.rs  mod.rs  transaction.rs  transaction_manager.rs  transaction_manager_factory.rs  watermark.rs
src/container/: disk_extendable_hash_table.rs  disk_hash_table.rs  hash_function.rs  hash_table.rs  linear_probe_hash_table.rs  mod.rs
src/disk/: disk_manager.rs  disk_scheduler.rs
src/execution/: check_option.rs  execution_common.rs  execution_context.rs  execution_engine.rs  executor_context.rs  executor_factory.rs  mod.rs  result_writer.rs  transaction_context.rs
src/network/: codec.rs  mod.rs  packet.rs
src/optimizer/: mod.rs  optimizer.rs
src/page_db/: mod.rs  page.rs  table_page.rs
src/planner/: planner.rs
src/primer/: mod.rs
src/recovery/: checkpoint_manager.rs  log_iterator.rs  log_manager.rs  log_record.rs  log_recovery.rs  mod.rs  wal_manager.rs
src/server/: config.rs  connection.rs  mod.rs  protocol.rs  server.rs  server_impl.rs
src/sql/: mod.rs
src/storage/: mod.rs
src/table/: mod.rs  table_heap.rs  tuple.rs
src/tests/: buffer_pool_manager_tests.rs  disk_manager.rs  disk_manager_tests.rs  disk_scheduler_tests.rs  lru_k_replacer_tests.rs  mod.rs
src/types_db/: array_type.rs  bigint_type.rs  binary_type.rs  boolean_type.rs  const_len_type.rs  date_type.rs  decimal_type.rs  enum_type.rs  float_type.rs  integer_type.rs  interval_type.rs  invalid_type.rs  json_type.rs  limits.rs  mod.rs  point_type.rs  smallint_type.rs  struct_type.rs  time_type.rs  timestamp_type.rs  tinyint_type.rs  type_id.rs  types.rs  uuid_type.rs  value.rs  varlen_type.rs  vector_type.rs
tests/: INLINE_TESTS_TO_MIGRATE.md  README.md  integration_tests.rs  lib.rs  mod.rs  test_runner.rs  test_setup.rs
tests/buffer/: async_bpm.rs  buffer_pool_manager_tests.rs  lru_k_replacer_tests.rs  mod.rs
tests/catalog/: mod.rs  smoke.rs
tests/common/: logger.rs  macros.rs  mod.rs  tempdb.rs
tests/concurrency/: concurrent_transactions.rs  mod.rs
tests/container/: extendable_htable_tests.rs  hash_functions_tests.rs  mod.rs
tests/data/: concurrent_inserts.db
tests/execution/: common.rs  engine_agg.rs  engine_case.rs  engine_create_index.rs  engine_create_table.rs  engine_delete.rs  engine_dml.rs  engine_group_by.rs  engine_index.rs  engine_join.rs  engine_order_by.rs  engine_select.rs  engine_smoke.rs  engine_update.rs  engine_where.rs  engine_window.rs  execution_context.rs  mod.rs  smoke.rs
tests/network/: smoke.rs
tests/planner/: mod.rs  plan_builder_aggregation.rs  plan_builder_basic.rs  plan_builder_create_index.rs  plan_builder_create_table.rs  plan_builder_insert.rs  plan_builder_join.rs  plan_builder_order_by.rs  plan_builder_savepoint_drop.rs  plan_builder_select.rs  plan_builder_subquery.rs  plan_builder_txn.rs  plan_builder_update.rs
tests/recovery/: db_instance_recovery.rs  mod.rs  smoke.rs
tests/server/: smoke.rs
tests/sqllogic/: mod.rs  test_runner.rs
tests/storage/: b_plus_tree_index_locking.rs  b_plus_tree_tests.rs  disk_manager_tests.rs  disk_scheduler_tests.rs  extendable_hash_table_page_tests.rs  fifo_concurrency.rs  int_comparator_tests.rs  lfu_concurrency.rs  lfu_performance.rs  lru_concurrency.rs  lru_integration_test.rs  lru_k_concurrency.rs  lru_k_performance.rs  lru_performance.rs  mod.rs  page_guard_tests.rs  page_tests.rs  table_heap.rs
tests/table/: mod.rs  tuple_tests.rs
(+351 files in other folders)
