[package]
name = "tkdb"
description = "DBMS inspired by CMU 15-415/445 - Introduction to DBMS Course"
version = "0.1.0"
authors = ["Thomas Korrison <ferrite.db@gmail.com>"]
edition = "2024"

[dependencies]
log = "0.4"
parking_lot = "0.12"
env_logger = "0.11"
prettytable-rs = "0.10"
md5 = "0.7"

chrono = "0.4"
chrono-tz = "0.10"
crossbeam = "0.8"
rand = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
spin = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
colored = "3.0"
rustyline = "15.0"
thiserror = "2.0"

# Testing
mockall = "0.13"
tempfile = "3.20"
sqllogictest = "0.28"

# Server dependencies
tokio = { version = "1.45", features = ["full"] }
serde_json = "1.0"
toml = "0.8"

# Network dependencies
# bytes = "1.0"
# tokio-util = { version = "0.7", features = ["codec"] }

# SQL parsing
sqlparser = "0.56"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
regex = "1.11"
hex = "0.4"

# Metrics
#metrics = "0.21"
#prometheus = "0.13"

# Authentication
#jsonwebtoken = "8.1"
#argon2 = "0.5"

# Logging and monitoring
#tracing = "0.1"
#tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1.45", features = ["full", "test-util"] }
