[package]
name = "tkdb"
description = "DBMS inspired by CMU 15-415/445 - Introduction to DBMS Course"
version = "0.1.0"
authors = ["Thomas Korrison <thomas_korrison@hotmail.com>"]
edition = "2024"

[dependencies]
log = "0.4"
parking_lot = "0.12"
env_logger = "0.11"
prettytable-rs = "0.10"
md5 = "0.7"

chrono = "0.4"
chrono-tz = "0.10"
rand = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
colored = "3.0"
rustyline = "16.0.0"
thiserror = "2.0"

# Testing
mockall = "0.13"
tempfile = "3.20"
sqllogictest = "0.28"

# Server dependencies
tokio = { version = "1.45",  default-features = false, features = ["rt", "io-util", "net", "rt-multi-thread", "signal", "macros", "sync", "fs", "time"] }
serde_json = "1.0"
toml = "0.8"

# Network dependencies
# bytes = "1.0"
# tokio-util = { version = "0.7", features = ["codec"] }

# SQL parsing
sqlparser = "0.57"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
regex = "1.11"
hex = "0.4"
lz4 = "1.24"
zstd = "0.13"
num_cpus = "1.16"
futures = "0.3.31"

# Metrics
#metrics = "0.21"
#prometheus = "0.13"

# Authentication
#jsonwebtoken = "8.1"
#argon2 = "0.5"

# Logging and monitoring
#tracing = "0.1"
#tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1.45", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true

#[features]
#default = ["server"]
#cli = []
#client = []
#server = []

