[package]
name = "tkdb"
description = "TokamakDB: a Rust OLTP database with NUMA-aware async execution and first-class observability"
version = "0.1.0"
authors = ["Thomas Korrison <ferrite.db@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tokamakdb/tokamakdb"
keywords = ["database", "oltp", "rust", "concurrency", "numa"]
categories = ["database-implementations", "asynchronous", "concurrency"]

[dependencies]
# Core runtime dependencies
log = "0.4"
parking_lot = { version = "0.12", features = ["arc_lock"] }
env_logger = "0.11"
prettytable-rs = "0.10"
md5 = "0.8"
thiserror = "2.0"
libc = "0.2"
mockall = { version = "0.14", optional = true }

# Time and random utilities
chrono = "0.4"
chrono-tz = "0.10"
rand = "0.9"

# Serialization and hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
serde_json = "1.0"
toml = "0.9"

# User interface
colored = "3.0"
rustyline = "17.0.0"
clap = { version = "4.5", features = ["derive"] }

# Async runtime and concurrency
tokio = { version = "1.48", default-features = false, features = [
    "rt", "io-util", "net", "rt-multi-thread", "signal", "macros", "sync", "fs", "time"
] }
crossbeam-channel = "0.5"
futures = "0.3"

# SQL parsing and processing
sqlparser = "0.59"
regex = "1.12"
hex = "0.4"

# System utilities
num_cpus = "1.17"

# Optional features (commented for now)
# Network dependencies
# bytes = "1.0"
# tokio-util = { version = "0.7", features = ["codec"] }

# Metrics and monitoring
# metrics = "0.21"
# prometheus = "0.13"
# tracing = "0.1"
# tracing-subscriber = "0.3"

# Authentication
# jsonwebtoken = "8.1"
# argon2 = "0.5"

[dev-dependencies]
# Enhanced tokio for testing
tokio = { version = "1.48", features = ["full", "test-util"] }

# Testing framework dependencies
mockall = "0.14"
tempfile = "3.23"
sqllogictest = "0.28"
test-tag = "0.1"

# Benchmarking
criterion = { version = "0.7", features = ["html_reports"] }

# Benchmark targets
[[bench]]
name = "cache_benchmarks"
harness = false

[[bench]]
name = "fifo_cache_benchmarking"
harness = false

[[bench]]
name = "fifo_complexity_benchmarks"
harness = false

[[bench]]
name = "time_complexity_demo"
harness = false

# Development profile - optimized for fast compilation and good debugging
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

# Test profile - balanced for test execution speed vs debugging
[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

# Release profile - maximum performance for production database
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true

# Benchmark profile - optimized for consistent performance measurement
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
codegen-units = 1
strip = true

# Feature flags for different build configurations
[features]
default = []

# CLI interface
cli = []

# Client library
client = []

# Server mode with network protocols
server = []

mocking = ["dep:mockall"]

# Development and testing features
dev = ["server", "mocking"]
full = ["cli", "client", "server"]
